som: Remove 'Linux ASan LSan (bionic)' from SoM alerts.
It's a new experimental bot. So it will likely have some test failures
right out of the gate. Add it to the exclusion list while it's
experimental.

Bug: 1200574
Change-Id: I65735762f6f8c229c1332572905910a9e396c638
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2842265
Reviewed-by: Stephen Martinis <martiniss@chromium.org>
Commit-Queue: Ben Pastene <bpastene@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40288}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -62,7 +62,8 @@
     },
     "chromium.memory": {
       "excluded_builders": [
-        "Android CFI"
+        "Android CFI",
+        "Linux ASan LSan (bionic)"
       ]
     },
     "chromium.win": {
