--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -13,6 +13,9 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
     "autoprefixer": "^10.2.5",
     "axe-core": "^4.1.3",
     "babel-eslint": "^10.1.0",
