Remove android-asan from SoM until the device issue is fixed.
Bug: 1105248, 1154309
Change-Id: Ia0342ad0b74977b8e598d441c55c7dce39508544
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2844783
Reviewed-by: Ben Pastene <bpastene@chromium.org>
Commit-Queue: Haiyang Pan <hypan@google.com>
Cr-Commit-Position: refs/heads/master@{#40310}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -62,6 +62,7 @@
     },
     "chromium.memory": {
       "excluded_builders": [
+        "android-asan",
         "Android CFI",
         "Linux ASan LSan (bionic)"
       ]
