[cr-buildbucket] Serve ScheduleBuild requests from Go
Bug: 1042991
Change-Id: I454bed75cb25071d087fa44f5020e76d4f2b5dd8
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2844562
Reviewed-by: Nodir Turakulov <nodir@chromium.org>
Commit-Queue: smut <smut@google.com>
Cr-Commit-Position: refs/heads/master@{#40314}

--- a/appengine/cr-buildbucket/dispatch.yaml
+++ b/appengine/cr-buildbucket/dispatch.yaml
@@ -41,6 +41,10 @@ dispatch:
   - url: "*/prpc/buildbucket.v2.Builds/CancelBuild"
     service: default-go
 
+  # ScheduleBuild is implemented in Go, so serve it from there.
+  - url: "*/prpc/buildbucket.v2.Builds/ScheduleBuild"
+    service: default-go
+
   # Only serve it on default service.
   - url: "*/build/*"
     service: default
