Remove bionic TSan builder from SOM
R=bpastene@chromium.org

Bug: 1200904
Change-Id: I38ee560e974ba35dfca549fd80a6c94ff768a469
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2847112
Auto-Submit: Stephen Martinis <martiniss@chromium.org>
Commit-Queue: Ben Pastene <bpastene@chromium.org>
Reviewed-by: Ben Pastene <bpastene@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40346}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -64,7 +64,8 @@
       "excluded_builders": [
         "android-asan",
         "Android CFI",
-        "Linux ASan LSan (bionic)"
+        "Linux ASan LSan (bionic)",
+        "Linux TSan (bionic)"
       ]
     },
     "chromium.win": {
