[go] Update deps.lock.
Primarily to pick up
https://go.googlesource.com/term.git/+/b80969c6736

It is needed to keep deploying GAE go111 apps.

dgraph-io/badger now transitively depends on two versions of
cespare/xxhash, so import it twice.

Updated repos:
https://code.googlesource.com/gocloud.git/+log/5391a3197612..b1b25d6857e3
https://chromium.googlesource.com/external/github.com/census-ecosystem/opencensus-go-exporter-stackdriver.git/+log/aa87ed666f12..f81d98c52a10
https://chromium.googlesource.com/external/github.com/antlr/antlr4.git/+log/b71f6894c7cb..e404d26f6142
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis.git/+log/0943dc4e70e1..c2c166f0e118
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis-sdks.git/+log/40d1266c08bd..28fa42989a6c
https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git/+log/d918b9904b2a..dc42de2870ad
https://chromium.googlesource.com/external/github.com/dgraph-io/ristretto.git/+log/62d2e1706f55..b837fdf292c8
https://chromium.googlesource.com/external/github.com/go-ole/go-ole.git/+log/bac9a21098b9..fa01fcca8640
https://chromium.googlesource.com/external/github.com/google/flatbuffers.git/+log/261cf3b20473..b82fe0738479
https://chromium.googlesource.com/external/github.com/google/go-querystring.git/+log/1f4a1f9d6e29..af7d77dde9d9
https://chromium.googlesource.com/external/github.com/google/pprof.git/+log/94a9f03dee38..7c2eacd09c8d
https://chromium.googlesource.com/external/github.com/google/tink.git/+log/dca70f855d48..e767489e11f6
https://chromium.googlesource.com/external/github.com/gopherjs/gopherjs.git/+log/1e088ea4ee04..a4630ec28c79
https://chromium.googlesource.com/external/github.com/klauspost/compress.git/+log/baa1f1e42d73..6546703918d8
https://chromium.googlesource.com/external/github.com/microsoft/go-winio.git/+log/5516f17a5958..58dba89befbc
https://chromium.googlesource.com/external/github.com/mostynb/zstdpool-syncpool.git/+log/e1cddd5d58e0..740a4e7abd3a
http

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -561,6 +561,10 @@ import:
 - package: github.com/DataDog/zstd
   repo: https://chromium.googlesource.com/external/github.com/DataDog/zstd.git
 - package: github.com/cespare/xxhash
+  version: v1.1.0
+  repo: https://chromium.googlesource.com/external/github.com/cespare/xxhash.git
+- package: github.com/cespare/xxhash/v2
+  version: v2
   repo: https://chromium.googlesource.com/external/github.com/cespare/xxhash.git
 - package: github.com/dgraph-io/ristretto
   repo: https://chromium.googlesource.com/external/github.com/dgraph-io/ristretto.git
