--- a/go/src/infra/appengine/statsui/frontend/package.json
+++ b/go/src/infra/appengine/statsui/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@chopsui/prpc-client": "^1.1.0",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -11,7 +12,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
@@ -54,11 +54,18 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.22",
+    "@types/mockdate": "^2.0.0",
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.7",
     "eslint": "^7.15.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^7.1.0",
-    "prettier": "2.2.1"
+    "mockdate": "^3.0.5",
+    "prettier": "2.2.1",
+    "ts-jest": "^26.5.5"
+  },
+  "jest": {
+    "restoreMocks": true
   }
 }
