[karte] Move karte out of appengine area.
Move karte out of the appengine area and regenerate the files.
Karte is not an appengine app and other GKE-based applications
such as the quota scheduler and UFS follow this convention for
their layout.

BUG=b/183724382
TEST=make gen

Change-Id: I90ae185ed44f4f2c8286401fa558be68e82a9a62
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2829570
Reviewed-by: Allen Li <ayatane@chromium.org>
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Cr-Commit-Position: refs/heads/master@{#40366}

--- a/go/src/infra/cros/karte/Makefile
+++ b/go/src/infra/cros/karte/Makefile
@@ -2,16 +2,20 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+.PHONY: default
 default: check
 
+.PHONY: check
 check:
 	golint ./...
 	go vet ./...
 	go test ./...
 
+.PHONY: test
 test:
 	go test ./...
 
+.PHONY: gen
 gen:
 	go generate ./...
 
