[karte] Add initial commit for server and client
BUG=b/183724382
TEST=make

Change-Id: I0ed31783aa9848438143710815e40d05249aecc6
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2829576
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Reviewed-by: Allen Li <ayatane@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40438}

--- a/go/src/infra/cros/karte/Makefile
+++ b/go/src/infra/cros/karte/Makefile
@@ -3,7 +3,11 @@
 # found in the LICENSE file.
 
 .PHONY: default
-default: check
+default: build
+
+.PHONY:
+build:
+	go build ./cmd/karte ./cmd/karteserver
 
 .PHONY: check
 check:
@@ -19,10 +23,15 @@ test:
 gen:
 	go generate ./...
 
+# clean just the binary artifacts
+.PHONY: clean
+clean:
+	$(RM) -f ./cmd/karte/karte ./cmd/karteserver/karteserver
+
 # Add a target for removing the generated files.
 # It is easier to keep the generated files in sync if there's
 # a straightforward way to remove them.
 .PHONY: realclean
-realclean:
+realclean: clean
 	find . -name '*.pb.go' -delete
 	$(RM) ./api/pb.discovery.go
