Stop sheriffing Mac10.15 Tests (dbg) until it's stable.
Bug: 1176803
Change-Id: I1dd1fe6a9f7319df4436c4f2ed3c417c65417fd9
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2847104
Auto-Submit: Erik Staab <estaab@chromium.org>
Reviewed-by: Stephen Martinis <martiniss@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Erik Staab <estaab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40525}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -57,6 +57,7 @@
     },
     "chromium.mac": {
       "excluded_builders": [
+        "Mac10.15 Tests (dbg)",
         "mac-osxbeta-rel"
       ]
     },
