[karte] Remove -f flag from RM in makefile
$(RM) expands to rm -f on Unix-like platforms.

BUG=b/183724382
TEST=make clean

Change-Id: I173730eb75564c0dad5d00b4090218a8d7b8b85c
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2860384
Reviewed-by: Allen Li <ayatane@chromium.org>
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Cr-Commit-Position: refs/heads/master@{#40529}

--- a/go/src/infra/cros/karte/GNUmakefile
+++ b/go/src/infra/cros/karte/GNUmakefile
@@ -35,7 +35,7 @@ gen:
 # clean just the binary artifacts
 .PHONY: clean
 clean:
-	$(IENV) $(RM) -f ./cmd/karte/karte ./cmd/karteserver/karteserver
+	$(IENV) $(RM) ./cmd/karte/karte ./cmd/karteserver/karteserver
 
 # Add a target for removing the generated files.
 # It is easier to keep the generated files in sync if there's
