[go] Roll deps, update protobuf lib.
Updated repos:
https://code.googlesource.com/gocloud.git/+log/b1b25d6857e3..dcfadaf1a8b1
https://chromium.googlesource.com/external/github.com/census-ecosystem/opencensus-go-exporter-stackdriver.git/+log/f81d98c52a10..5b851abf0761
https://chromium.googlesource.com/external/github.com/VividCortex/godaemon.git/+log/eda977734e72..f8c5ec7b5949
https://chromium.googlesource.com/external/github.com/VividCortex/mysqlerr.git/+log/4c396ae82aac..69f897f9a2fd
https://chromium.googlesource.com/external/github.com/andygrunwald/go-gerrit.git/+log/46815e48bfe0..58fd2fef604e
https://chromium.googlesource.com/external/github.com/antlr/antlr4.git/+log/e404d26f6142..62554204404f
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis.git/+log/c2c166f0e118..3b7a4b50d27b
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis-sdks.git/+log/28fa42989a6c..5121020d2a43
https://chromium.googlesource.com/external/github.com/chromedp/cdproto.git/+log/0942afbea50e..5ec2b0624aec
https://chromium.googlesource.com/external/github.com/chromedp/chromedp.git/+log/5b511f121cb2..6a53e09ea7a4
https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git/+log/dc42de2870ad..e4002b7758c8
https://chromium.googlesource.com/external/github.com/dgraph-io/ristretto.git/+log/b837fdf292c8..642987276d6a
https://chromium.googlesource.com/external/github.com/golang/glog.git/+log/23def4e6c14b..424d2337a529
https://chromium.googlesource.com/external/github.com/google/flatbuffers.git/+log/b82fe0738479..d3cd78a87c8e
https://chromium.googlesource.com/external/github.com/google/pprof.git/+log/7c2eacd09c8d..a2663126120b
https://chromium.googlesource.com/external/github.com/google/tink.git/+log/e767489e11f6..c8ffacbf1269
https://chromium.googlesource.com/external/github.com/googleapis/gax-go.git/+log/fbaf9882acf3..933904ac9bf5
https://chromium.googlesource.com/external/github.com/gorilla/websocket.git/+log/c3dd95aea977..e8629af678b7

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -17,7 +17,7 @@ import:
   - proto
   - protoc-gen-go
 - package: google.golang.org/protobuf
-  version: 711224230b573a3b2df57391319e80e606bccddc
+  version: v1.26.0
   repo: https://go.googlesource.com/protobuf.git
 - package: github.com/gorhill/cronexpr
   version: master
@@ -554,7 +554,8 @@ import:
   repo: https://chromium.googlesource.com/external/github.com/square/go-jose.git
 - package: github.com/bmatcuk/doublestar
   repo: https://chromium.googlesource.com/external/github.com/bmatcuk/doublestar.git
-  version: upstream/master
+  # The next revision uses io/fs which breaks our OSX builds running on go1.15.
+  version: 1e1bcf73ccd3edeb5de9fb61925a0d79fcc5d9df
 - package: github.com/dgraph-io/badger/v3
   version: master
   repo: https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git
