--- a/go/src/infra/appengine/cros/lab_inventory/app/appengine/app.yaml
+++ b/go/src/infra/appengine/cros/lab_inventory/app/appengine/app.yaml
@@ -1,14 +1,14 @@
 service: default
-runtime: go111
-handlers:
-- url: /internal/.*
-  script: auto
-  secure: always
-  login: admin
-- url: /admin/.*
-  script: auto
-  secure: always
-  login: admin
-- url: /.*
-  script: auto
-  secure: always
+runtime: go113
+
+luci_gae_vars:
+  cros-lab-inventory-dev:
+    AUTH_SERVICE_HOST: chrome-infra-auth-dev.appspot.com
+    CONFIG_SERVICE_HOST: luci-config.appspot.com
+    TS_MON_ACCOUNT: app-engine-metric-publishers@prodx-mon-chrome-infra.google.com.iam.gserviceaccount.com
+
+entrypoint: >
+  main
+  -auth-service-host ${AUTH_SERVICE_HOST}
+  -config-service-host ${CONFIG_SERVICE_HOST}
+  -ts-mon-account ${TS_MON_ACCOUNT}
