[IV2]: Add prod configs to app.yaml
Bug: b/184579661

Adds missing configs in app.yaml to enable running the new IV2 service
on prod.

Change-Id: Ib0a809178a7f648f57f1bdab5f51e80f1601718f
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2877764
Reviewed-by: Eshwar Narayan <eshwarn@chromium.org>
Reviewed-by: Xixuan Wu <xixuan@chromium.org>
Commit-Queue: Anushruth  <anushruth@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40706}

--- a/go/src/infra/appengine/cros/lab_inventory/app/appengine/app.yaml
+++ b/go/src/infra/appengine/cros/lab_inventory/app/appengine/app.yaml
@@ -6,6 +6,10 @@ luci_gae_vars:
     AUTH_SERVICE_HOST: chrome-infra-auth-dev.appspot.com
     CONFIG_SERVICE_HOST: luci-config.appspot.com
     TS_MON_ACCOUNT: app-engine-metric-publishers@prodx-mon-chrome-infra.google.com.iam.gserviceaccount.com
+  cros-lab-inventory:
+    AUTH_SERVICE_HOST: chrome-infra-auth.appspot.com
+    CONFIG_SERVICE_HOST: luci-config.appspot.com
+    TS_MON_ACCOUNT: app-engine-metric-publishers@prodx-mon-chrome-infra.google.com.iam.gserviceaccount.com
 
 entrypoint: >
   main
