Monorail: Configure ESLint with Prettier, React, and better TypeScript support + fix existing ES Lint errors in React code.
Bug: monorail:8931
Change-Id: I2da985c5e59994b4d95f113e7975c72faa41f371
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2880081
Commit-Queue: Tiffany Zhang <zhangtiff@chromium.org>
Reviewed-by: Dave Tu <dtu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40763}

--- a/appengine/monorail/.eslintrc.json
+++ b/appengine/monorail/.eslintrc.json
@@ -1,14 +1,42 @@
 {
     "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
         "google",
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
         "plugin:css-modules/recommended"
     ],
-    "plugins": ["css-modules", "jsx-a11y"],
+    "plugins": ["react", "css-modules", "jsx-a11y", "@typescript-eslint"],
     "env": {
         "es6": true
     },
-    "parser": "babel-eslint",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
+        "ecmaFeatures": {
+        "jsx": true
+        },
+        "ecmaVersion": 12,
         "sourceType": "module"
-    }
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "rules": {
+        "react/display-name": "off"
+    },
+    "overrides": [
+        {
+          "files": ["*.ts", "*.tsx"],
+          "rules": {
+            "valid-jsdoc": ["error", {
+                "requireReturnType": false,
+                "requireParamType": false,
+                "requireReturn": false
+            }]
+          }
+        }
+    ]
 }
