--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -16,6 +16,8 @@
     "@testing-library/react": "^11.2.6",
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
     "axe-core": "^4.1.3",
     "babel-eslint": "^10.1.0",
@@ -28,9 +30,10 @@
     "deep-equal": "^2.0.5",
     "eslint": "^7.22.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "html-webpack-plugin": "^4.5.2",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^6.3.0",
@@ -45,10 +48,12 @@
     "mocha": "^7.2.0",
     "path": "^0.12.7",
     "postcss-loader": "^4.2.0",
+    "prettier": "^2.2.1",
     "puppeteer": "^8.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "sinon": "^10.0.0",
     "style-loader": "^2.0.0",
+    "typescript": "^4.2.4",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0"
@@ -86,7 +91,6 @@
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "typescript": "^4.2.3"
+    "reselect": "^4.0.0"
   }
 }
