[go] Roll deps, pin golang.org/x/net.
Newer golang.org/x/net revisions use errors.Is(...) and other APIs
which are not available on go113. They break all our GAE go113 apps:
https://ci.chromium.org/ui/p/infradata-gae/builders/ci/gae-deploy/b8847464377476167600/overview

Also fix python3 compatibility issues in deps.py. It is called with
python3 from env.py.

Other updated repos:
https://code.googlesource.com/gocloud.git/+log/aebf043abb07..7fd2ccd26ade
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis-sdks.git/+log/b0605647bbe2..3b602dd48f7f
https://chromium.googlesource.com/external/github.com/google/tink.git/+log/3993433abb87..ab8670a9a971
https://go.googlesource.com/build.git/+log/e0288b06a79a..0536f7398f0e
https://go.googlesource.com/mod.git/+log/67f1c1edc27a..6088ed88cecd
https://go.googlesource.com/tools.git/+log/be4aaae4cf86..9dfac01ddd86
https://chromium.googlesource.com/external/github.com/grpc/grpc-go.git/+log/62adda2ece5e..8bf65c69b99e

R=tandrii@chromium.org, iannucci@chromium.org, tikuta@chromium.org

Change-Id: I266d5f76c3a7ec3ed966acca5d0a80755cdc1ed6
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2893235
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
Commit-Queue: Vadim Shtayura <vadimsh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40901}

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -82,10 +82,9 @@ import:
   subpackages:
   - encoding/json5
 - package: golang.org/x/net
-  version: master
+  # The next version uses errors.Is(...) and no longer works on GAE go113.
+  version: 7fd8e65b642006927f6cec5cb4241df7f98a2210
   repo: https://go.googlesource.com/net.git
-  subpackages:
-  - context/ctxhttp
 - package: golang.org/x/text
   version: master
   repo: https://go.googlesource.com/text.git
