Add ability to run a batch of experiments to Pinpoint CLI
This allows the user to run a set of experiments using a yaml preset
plus configuration for an A and a B CL. This generates a BatchID,
which can later be used to wait, download results, or generate an
analysis.

Bug: 1206025
Change-Id: Ifb8c4666ee794c40afaf6806c5ebd10027fe319c
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2875370
Reviewed-by: Dean Berris <dberris@chromium.org>
Reviewed-by: John Chen <johnchen@chromium.org>
Commit-Queue: Ryan Heise <heiserya@google.com>
Cr-Commit-Position: refs/heads/master@{#40932}

--- a/go/src/infra/chromeperf/pinpoint/cli/testdata/invalid-presets.yaml
+++ b/go/src/infra/chromeperf/pinpoint/cli/testdata/invalid-presets.yaml
@@ -26,3 +26,30 @@ presets:
     <<: *base
     telemetry_experiment:
       story_selection:
+  batch-empty-configs:
+      telemetry_batch_experiment:
+        - benchmark: loading.desktop
+          configs:
+            - linux-perf
+            - Win 7 Perf
+          stories:
+            - AirBnB_warm
+            - ArsTechnica_warm
+        - benchmark: system_health.common_mobile
+          stories:
+            - browse:news:cnn:2020
+          story_tags:
+            - tag_a
+            - tag_b
+  batch-empty-stories-and-story-tags:
+    telemetry_batch_experiment:
+      - benchmark: loading.desktop
+        configs:
+          - linux-perf
+          - Win 7 Perf
+        stories:
+          - AirBnB_warm
+          - ArsTechnica_warm
+      - benchmark: system_health.common_mobile
+        configs:
+          - android-pixel2-perf
