--- a/go/src/infra/chromeperf/pinpoint/cli/testdata/simple-presets.yaml
+++ b/go/src/infra/chromeperf/pinpoint/cli/testdata/simple-presets.yaml
@@ -1,4 +1,3 @@
-# Sample test data for presets
 presets:
   basic: &basic
     telemetry_experiment:
@@ -16,3 +15,26 @@ presets:
     telemetry_experiment:
       extra_args:
         - "--extra_complex_args"
+  batch:
+    telemetry_batch_experiment:
+      - benchmark: loading.desktop
+        configs:
+          - linux-perf
+          - Win 7 Perf
+        stories:
+          - AirBnB_warm
+          - ArsTechnica_warm
+      - &batch_anchor_example
+        benchmark: system_health
+        configs:
+          - android-pixel2-perf
+        stories:
+          - browse:news:cnn:2020
+        story_tags:
+          - tag_a
+          - tag_b
+  batch_mobile:
+    telemetry_batch_experiment:
+      - <<: *batch_anchor_example
+        configs:
+          - android-pixel2-perf
