[karte] Add path to vpython in makefile
In order for the `make docker` target to work, we need to be
able to find vpython in the shebang of env.py

BUG=b/183724382
TEST=make docker

Change-Id: I5b1907d52d944f469fb10635da5f766c60594753
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2898038
Reviewed-by: Otabek Kasimov <otabek@google.com>
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Cr-Commit-Position: refs/heads/master@{#40982}

--- a/go/src/infra/cros/karte/GNUmakefile
+++ b/go/src/infra/cros/karte/GNUmakefile
@@ -3,7 +3,8 @@
 # found in the LICENSE file.
 
 # IENV is the infra environment wrapper script
-IENV := $(realpath ../../../../env.py)
+# include an explicit path to the vpython interpreter because sudo cleans the PATH.
+IENV    := $(realpath ../../../../../../depot_tools/vpython) $(realpath ../../../../env.py)
 
 .PHONY: default
 default: build
