--- a/go/src/infra/cros/karte/cmd/karteserver/Dockerfile
+++ b/go/src/infra/cros/karte/cmd/karteserver/Dockerfile
@@ -2,13 +2,10 @@
 # Use of this source code is governed under the Apache License, Version 2.0
 # that can be found in the LICENSE file.
 
-# Use an empty base image
-# https://github.com/GoogleContainerTools/distroless
-FROM gcr.io/distroless/static:latest
-
-# TODO(gregorynisbet): perform the build as part of the Dockerfile.
-# The binary is built on the host. Copy it into the image.
-COPY ./karteserver ./karteserver
-
+# TODO(gregorynisbet): switch base container to gcr.io/distroless/static:latest
+# more info here https://github.com/GoogleContainerTools/distroless
+FROM ubuntu:focal
+COPY ./karteserver /opt/srv/karteserver
+RUN chmod a+x /opt/srv/karteserver
 USER nobody
-ENTRYPOINT ["./karteserver"]
+ENTRYPOINT ["/opt/srv/karteserver"]
