Revert "[karte] Change dockerfile to use ubuntu:focal as base image"
This reverts commit 5ad41122de94a3f5c0dac7e6aee77f85cbc93546.

Reason for revert: Documentation explicitly says use the smallest base image possible. Using distroless is possible, therefore we should use it.

Original change's description:
> [karte] Change dockerfile to use ubuntu:focal as base image
>
> Make the Karte project easier to develop locally and inspect
> inside a container by using ubuntu:focal as the base image.
> ubuntu:focal is used in other projects as well.
>
> BUG=b/183724382
> TEST=make docker
>
> Change-Id: Icfa62d9db3094cda986469d2d60346f87d1f0f16
> Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2898042
> Reviewed-by: Otabek Kasimov <otabek@google.com>
> Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
> Cr-Commit-Position: refs/heads/master@{#41051}

Bug: b/183724382
Change-Id: Ifd7059a538442bba1aea8cf75ccb00e76d0c7d86
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2906972
Reviewed-by: Otabek Kasimov <otabek@google.com>
Reviewed-by: Allen Li <ayatane@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Cr-Commit-Position: refs/heads/master@{#41075}

--- a/go/src/infra/cros/karte/cmd/karteserver/Dockerfile
+++ b/go/src/infra/cros/karte/cmd/karteserver/Dockerfile
@@ -2,10 +2,13 @@
 # Use of this source code is governed under the Apache License, Version 2.0
 # that can be found in the LICENSE file.
 
-# TODO(gregorynisbet): switch base container to gcr.io/distroless/static:latest
-# more info here https://github.com/GoogleContainerTools/distroless
-FROM ubuntu:focal
-COPY ./karteserver /opt/srv/karteserver
-RUN chmod a+x /opt/srv/karteserver
+# Use an empty base image
+# https://github.com/GoogleContainerTools/distroless
+FROM gcr.io/distroless/static:latest
+
+# TODO(gregorynisbet): perform the build as part of the Dockerfile.
+# The binary is built on the host. Copy it into the image.
+COPY ./karteserver ./karteserver
+
 USER nobody
-ENTRYPOINT ["/opt/srv/karteserver"]
+ENTRYPOINT ["./karteserver"]
