UFS: rename use_cached_hwid_manufacturing_config luci config
use_cached_hwid_manufacturing_config is used for determining whether to
use the cached configs from HWID server or the old cache from the Git
repo. If true, GetChromeOSDeviceData will return None for
ManufacturingConfig.

BUG=b/186663540
TEST=make test

Change-Id: I99ed5a5f757e27fc0490b9075046c0c976f9ea7d
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2857162
Reviewed-by: Eshwar Narayan <eshwarn@chromium.org>
Commit-Queue: Justin Suen <justinsuen@google.com>
Cr-Commit-Position: refs/heads/master@{#41172}

--- a/go/src/infra/unifiedfleet/app/config/config.cfg
+++ b/go/src/infra/unifiedfleet/app/config/config.cfg
@@ -41,3 +41,4 @@ queen_service: "drone-queen-dev.appspot.com"
 enable_dronequeen_push: true
 disable_inv2_sync: true
 enable_lab_stateconfig_push: true
+use_cached_hwid_manufacturing_config: false
