pinpoint: Implement A/B experiment result analysis
This change introduces the following facilities:

- A minimal histogram JSON parser.

- A method for loading an A/B experiment manifest.

- A way of traversing the artifacts directory to search for relevant
  performance measurements in well-known locations (in this case, for
  Telemetry benchmarks, files named perf_results.json).

The crux of this change is the statistical analysis that's being done to
determine whether overall we can detect a difference between the base
configuration and an experimental configuration. This approach allows us
to generate a report and quantify the p-values for the Mann-Whitney
U-test results.

To give an overall p-value to the result of the many measurements, we
get the Harmonic Mean p-value
(https://en.wikipedia.org/wiki/Harmonic_mean_p-value) from the p-values
that are measured for all the measurements made in the experiment.

For testing purposes, we commit the artifacts of a random A/B experiment
which has enough sample data to test out the functionality in this
change.

R=abennetts@google.com, fancl@chromium.org, seanmccullough@google.com

NOTE: We also add a dependency on the gonum module/packages in this
change.

--------------------------------------------------------------------------
Updated repos:
https://code.googlesource.com/gocloud.git/+log/258980a039db..825ddd692363
https://chromium.googlesource.com/external/github.com/antlr/antlr4.git/+log/dc66788476a7..c5ad59b459ec
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis-sdks.git/+log/e155d015bcc4..f9d52cdef1c3
https://chromium.googlesource.com/external/github.com/chromedp/chromedp.git/+log/f50e6240fa87..4b32c9aa08e6
https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git/+log/59c069f6f3a4..74ade987faa5
https://chromium.googlesource.com/external/github.com/dgraph-io/ristretto.git/+log/0bf2acd73aa3..9d4946d9b973
https://chromium.googlesource.com/external/github.com/google/flatbu

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -582,3 +582,13 @@ import:
   repo: https://chromium.googlesource.com/external/github.com/google/tink.git
   subpackages:
   - go
+- package: gonum.org/v1/gonum
+  version: upstream/v0.9.1
+  repo: https://chromium.googlesource.com/external/github.com/gonum/gonum.git
+  subpackages:
+  - stat
+- package: github.com/aclements/go-moremath
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/aclements/go-moremath.git
+  subpackages:
+  - stats
