[python_pb2] update the used protoc and re-gen the same luci-go rev.
R=yiwzhang

Bug: 1216431
Change-Id: Ieff24c57d261998b1e449d6598db6c2de52e2c52
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2940172
Commit-Queue: Yiwei Zhang <yiwzhang@google.com>
Auto-Submit: Andrii Shyshkalov <tandrii@google.com>
Reviewed-by: Yiwei Zhang <yiwzhang@google.com>
Cr-Commit-Position: refs/heads/master@{#41424}

--- a/python_pb2/Makefile
+++ b/python_pb2/Makefile
@@ -9,19 +9,20 @@ GCLIENT_ROOT=$(shell gclient root)
 INFRA=$(GCLIENT_ROOT)/infra
 LUCI_GO=$(INFRA)/go/src/go.chromium.org/luci
 TOOLS=$(INFRA)/luci/appengine/components/tools
+PROTOC=$(INFRA)/cipd/bin/protoc
 
 all: regenerate
 
-$(INFRA)/cipd/protoc:
+$(PROTOC):
 	cd $(INFRA) && gclient runhooks
 
 $(TOOLS)/protoc-gen-prpc-python:
 	echo "Run gclient sync yourself"
 	exit 1
 
-regenerate: $(INFRA)/cipd/protoc $(TOOLS)/protoc-gen-prpc-python
+regenerate: $(PROTOC) $(TOOLS)/protoc-gen-prpc-python
 	rm -rf ./go
-	$(INFRA)/cipd/protoc \
+	$(INFRA)/cipd/bin/protoc \
 		--proto_path $(INFRA)/go/src \
 		--proto_path $(LUCI_GO)/grpc/proto \
 		$(LUCI_GO)/buildbucket/proto/*.proto \
