Pinpoint CLI - add preset spec for batch analysis
experiment_telemetry is covered by https://source.chromium.org/chromium/infra/infra/+/main:go/src/infra/chromeperf/pinpoint_testing/e2e_smoke_test.go;272=;drc=f71fd2e8c60bc265d2ebea1de908e9b4b75141d1;l=248

Bug: 1217471
Change-Id: I190fc4a5a8982e66146fdef0e167274eace22175
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2945680
Reviewed-by: Sean McCullough <seanmccullough@google.com>
Commit-Queue: Ryan Heise <heiserya@google.com>
Cr-Commit-Position: refs/heads/master@{#41560}

--- a/go/src/infra/chromeperf/pinpoint/cli/testdata/simple-presets.yaml
+++ b/go/src/infra/chromeperf/pinpoint/cli/testdata/simple-presets.yaml
@@ -38,3 +38,17 @@ presets:
       - <<: *batch_anchor_example
         configs:
           - android-pixel2-perf
+  summary_report:
+    batch_summary_report_spec:
+      loading.desktop:
+        metrics:
+          - name: largestContentfulPaint
+          - name: timeToFirstContentfulPaint
+          - name: overallCumulativeLayoutShift
+          - name: totalBlockingTime
+      loading.mobile:
+        metrics:
+          - name: largestContentfulPaint
+          - name: timeToFirstContentfulPaint
+          - name: overallCumulativeLayoutShift
+          - name: totalBlockingTime
