--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -75,7 +75,7 @@
     "@types/gapi.auth2": "0.0.54",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.1",
-    "chart.js": "2.8.0",
+    "chart.js": "^2.9.4",
     "debounce": "^1.2.1",
     "diff": "^5.0.0",
     "dompurify": "2.2.7",
