--- a/recipes/recipes/build_wheels.expected/trybot config.json
+++ b/recipes/recipes/build_wheels.expected/trybot config.json
@@ -16,6 +16,49 @@
   },
   {
     "cmd": [
+      "vpython",
+      "-u",
+      "RECIPE_REPO[depot_tools]/gerrit_client.py",
+      "changes",
+      "--host",
+      "https://chromium-review.googlesource.com",
+      "--json_file",
+      "/path/to/tmp/json",
+      "--limit",
+      "1",
+      "-p",
+      "change=123456",
+      "-o",
+      "ALL_REVISIONS",
+      "-o",
+      "DOWNLOAD_COMMANDS"
+    ],
+    "env": {
+      "PATH": "<PATH>:RECIPE_REPO[depot_tools]"
+    },
+    "infra_step": true,
+    "name": "gerrit fetch current CL info",
+    "timeout": 60,
+    "~followup_annotations": [
+      "@@@STEP_LOG_LINE@json.output@[@@@",
+      "@@@STEP_LOG_LINE@json.output@  {@@@",
+      "@@@STEP_LOG_LINE@json.output@    \"branch\": \"refs/branch-heads/foo\", @@@",
+      "@@@STEP_LOG_LINE@json.output@    \"owner\": {@@@",
+      "@@@STEP_LOG_LINE@json.output@      \"name\": \"John Doe\"@@@",
+      "@@@STEP_LOG_LINE@json.output@    }, @@@",
+      "@@@STEP_LOG_LINE@json.output@    \"revisions\": {@@@",
+      "@@@STEP_LOG_LINE@json.output@      \"184ebe53805e102605d11f6b143486d15c23a09c\": {@@@",
+      "@@@STEP_LOG_LINE@json.output@        \"_number\": \"7\", @@@",
+      "@@@STEP_LOG_LINE@json.output@        \"ref\": \"refs/changes/56/123456/7\"@@@",
+      "@@@STEP_LOG_LINE@json.output@      }@@@",
+      "@@@STEP_LOG_LINE@json.output@    }@@@",
+      "@@@STEP_LOG_LINE@json.output@  }@@@",
+      "@@@STEP_LOG_LINE@json.output@]@@@",
+      "@@@STEP_LOG_END@json.output@@@"
+    ]
+  },
+  {
+    "cmd": [
       "python",
       "-u",
       "RECIPE_REPO[depot_tools]/gclient.py",
@@ -24,6 +67,9 @@
       "cache_dir = '[CACHE]/git'\nsolutions = [{'deps_file': '.DEPS.git', 'managed': True, 'name': 'infra', 'url': 'https://chromium.googlesource.com/infra/infra.git'}]"
     ],
     "cwd": "[CACHE]/builder/build_wheels",
+    "env": {
+      "DEPOT_TOOLS_REPORT_BUILD": "infra/try/builder/8945511751514863184"
+    },
     "env_suffixes": {
       "PATH": [
         "RECIPE_REPO[depot_tools]"
@@ -50,11 +96,14 @@
       "--with_tags",
       "--delete_unversioned_trees",
       "--revision",
-      "infra@origin/master",
+      "infra@refs/changes/56/123456/7",
       "--output-json",
       "/path/to/tmp/json"
     ],
     "cwd": "[CACHE]/builder/build_wheels",
+    "env": {
+      "DEPOT_TOOLS_REPORT_BUILD": "infra/try/builder/8945511751514863184"
+    },
     "env_suffixes": {
       "PATH": [
         "RECIPE_REPO[depot_tools]"
@@ -87,6 +136,9 @@
       "local_bot"
     ],
     "cwd": "[CACHE]/builder/build_wheels",
+    "env": {
+      "DEPOT_TOOLS_REPORT_BUILD": "infra/try/builder/8945511751514863184"
+    },
     "env_suffixes": {
       "PATH": [
         "RECIPE_REPO[depot_tools]"
@@ -108,6 +160,9 @@
       "local_bot@example.com"
     ],
     "cwd": "[CACHE]/builder/build_wheels",
+    "env": {
+      "DEPOT_TOOLS_REPORT_BUILD": "infra/try/builder/8945511751514863184"
+    },
     "env_suffixes": {
       "PATH": [
         "RECIPE_REPO[depot_tools]"
@@ -125,6 +180,9 @@
       "runhooks"
     ],
     "cwd": "[CACHE]/builder/build_wheels",
+    "env": {
+      "DEPOT_TOOLS_REPORT_BUILD": "infra/try/builder/8945511751514863184"
+    },
     "env_suffixes": {
       "PATH": [
         "RECIPE_REPO[depot_tools]"
