[karte] Configure GAEv2 app file for karte.
Configure GAEv2 and deploy dev app.

BUG=b/183724382
TEST=make run AND observe that service starts locally AND observe that project deploys.

Change-Id: I453746a6fec7461398209ab097054957801bbe2c
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2952703
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Reviewed-by: Allen Li <ayatane@chromium.org>
Cr-Commit-Position: refs/heads/master@{#41597}

--- a/go/src/infra/cros/karte/GNUmakefile
+++ b/go/src/infra/cros/karte/GNUmakefile
@@ -6,6 +6,8 @@
 # include an explicit path to the vpython interpreter because sudo cleans the PATH.
 IENV    := $(realpath ../../../../../../depot_tools/vpython) $(realpath ../../../../env.py)
 
+GAE_PY := ../../../../../luci/appengine/components/tools/gae.py
+
 .PHONY: default
 default: build
 
@@ -19,11 +21,6 @@ check:
 	$(IENV) go vet ./...
 	$(IENV) go test ./...
 
-.PHONY: docker
-docker: build
-	@$(IENV) test -f ./cmd/karteserver/karteserver
-	(cd -P -- ./cmd/karteserver && sudo $(IENV) docker build .)
-
 .PHONY: test
 test:
 	$(IENV) go test ./...
@@ -35,7 +32,7 @@ gen:
 # clean just the binary artifacts
 .PHONY: clean
 clean:
-	$(IENV) $(RM) ./cmd/karte/karte ./cmd/karteserver/karteserver
+	$(IENV) $(RM) ./cmd/karte/karte ./cmd/karteserver/karteserver ./karte ./karteserver
 
 # Add a target for removing the generated files.
 # It is easier to keep the generated files in sync if there's
@@ -44,3 +41,11 @@ clean:
 realclean: clean
 	$(IENV) find . -name '*.pb.go' -delete
 	$(IENV) $(RM) ./api/pb.discovery.go
+
+.PHONY: run
+run:
+	$(IENV) ./karteserver -auth-service-host chrome-infra-auth-dev.appspot.com
+
+.PHONY: deploy
+deploy:
+	$(IENV) $(GAE_PY) upload --app-id=chrome-fleet-karte-dev --app-dir=./cmd/karteserver
