--- a/appengine/monorail/requirements.py2.txt
+++ b/appengine/monorail/requirements.py2.txt
@@ -1,97 +1,43 @@
 # Python 2 packages needed for production.
+# All packages must be at least 3 weeks old, crbug.com/1117193#c5
+# For hash-checking mode, all nested dependencies must be included.
 
-# Uploaded Apr 19, 2020
 ezt==1.1 --hash=sha256:2131c2aa34d395433410b4e3cb71b22ab1471fae9da1c60e4426f74c86cb0104
-
-# Uploaded Feb 2, 2020
 # TODO(crbug/monorail/8271) clean up duplicate from third_party
 fakeredis==1.1.1 --hash=sha256:b8cf9c19fbcd53fe0512ece75b2df9430c46f75898111f50cff309c3a35b921d
-
-# Uploaded Feb 24, 2020
 google-cloud-tasks==1.5.0 --hash=sha256:36aa16f0c52aa9a292b1f919d2582725731e9760393c9ca98ce599c68cbf9996
-
 # TODO(crbug/monorail/8271) clean up duplicate from third_party
-# Uploaded Jun 1, 2020
 redis==3.5.3 --hash=sha256:432b788c4530cfe16d8d943a09d40ca6c16149727e4afe8c2c9d5580c59d9f24
 
 # TODO(crbug/monorail/8271) clean up duplicate from third_party
 # Required by fakeredis
-# Uploaded Nov 8, 2020
 sortedcontainers==2.3.0 --hash=sha256:37257a32add0a3ee490bb170b599e93095eed89a55da91fa9f48753ea12fd73f
 
 # Required by google-cloud-tasks
-# Uploaded Jun 3, 2020
-googleapis-common-protos==1.52.0 --hash=sha256:c8961760f5aad9a711d37b675be103e0cc4e9a39327e0d6d857872f698403e24
-
-# Required by google-cloud-tasks
-# Uploaded Mar 10, 2020
 enum34==1.1.10 --hash=sha256:a98a201d6de3f2ab3db284e70a33b0f896fbf35f8086594e8c9e74b909058d53
-
-# Required by google-cloud-tasks
-# Uploaded Jul 10, 2019
+googleapis-common-protos==1.52.0 --hash=sha256:c8961760f5aad9a711d37b675be103e0cc4e9a39327e0d6d857872f698403e24
+google-api-core==1.22.0 --hash=sha256:c4e3b3d914e09d181287abb7101b42f308204fa5e8f89efc4839f607303caa2f
 grpc-google-iam-v1==0.12.3 --hash=sha256:0bfb5b56f648f457021a91c0df0db4934b6e0c300bd0f2de2333383fe958aa72
 
-# Required by google-cloud-tasks
-# Uploaded Jul 21, 2020
-google-api-core==1.22.0 --hash=sha256:c4e3b3d914e09d181287abb7101b42f308204fa5e8f89efc4839f607303caa2f
-
-# builtin
 # Required by google-api-core
-# Uploaded Jul 15, 2019
 futures==3.3.0 --hash=sha256:49b3f5b064b6e3afc3316421a3f25f66c137ae88f068abbf72830170033c5e16
-
-# builtin
-# Required by google-api-core
-# Uploaded Apr 28, 2020
-pytz==2020.1 --hash=sha256:a494d53b6d39c3c6e44c3bec237336e14305e4f29bbf800b599253057fbb79ed
-
 # TODO(crbug/monorail/8271) clean up duplicate from third_party
-# Required by google-api-core
-# Uploaded Aug 6, 2020
 google-auth==1.20.1 --hash=sha256:ce1fb80b5c6d3dd038babcc43e221edeafefc72d983b3dc28b67b996f76f00b9
-
-# builtin
-# Required by google-api-core
-# Uploaded May 28, 2020
-setuptools==44.1.1 --hash=sha256:27a714c09253134e60a6fa68130f78c7037e5562c4f21f8f318f2ae900d152d5
-
-# Required by google-api-core
-# Uploaded Jun 17, 2020
+pytz==2020.1 --hash=sha256:a494d53b6d39c3c6e44c3bec237336e14305e4f29bbf800b599253057fbb79ed
 requests==2.24.0 --hash=sha256:fe75cc94a9443b9246fc7049224f75604b113c36acb93f87b80ed42c44cbb898
-
-# builtin but not used
-# Required by google-api-core
-# Uploaded May 21, 2020
+setuptools==44.1.1 --hash=sha256:27a714c09253134e60a6fa68130f78c7037e5562c4f21f8f318f2ae900d152d5
 six==1.15.0 --hash=sha256:8b74bedcbbbaca38ff6d7491d76f2b06b3592611af620f8426e82dddb04a5ced
 
 # Required by requests
-# Uploaded Jul 22, 2020
+certifi==2020.6.20 --hash=sha256:8fc0819f1f30ba15bdb34cceffb9ef04d99f420f68eb75d901e9560b8749fc41
+chardet==3.0.4 --hash=sha256:fc323ffcaeaed0e0a02bf4d117757b98aed530d9ed4531e3e15460124c106691
+idna==2.10 --hash=sha256:b97d804b1e9b523befed77c48dacec60e6dcb0b5391d57af6a65a312a90648c0
 urllib3==1.25.10 --hash=sha256:e7983572181f5e1522d9c98453462384ee92a0be7fac5f1413a1e35c56cc0461
 
-# Required by requests
-# Uploaded Jun 20, 2020
-certifi==2020.6.20 --hash=sha256:8fc0819f1f30ba15bdb34cceffb9ef04d99f420f68eb75d901e9560b8749fc41
-
-# Required by requests
-# Uploaded Jun 8, 2017
-chardet==3.0.4 --hash=sha256:fc323ffcaeaed0e0a02bf4d117757b98aed530d9ed4531e3e15460124c106691
-
-# Required by requests
-# Uploaded Jun 27, 2020
-idna==2.10 --hash=sha256:b97d804b1e9b523befed77c48dacec60e6dcb0b5391d57af6a65a312a90648c0
-
 # Required by google-auth
-# Uploaded Jan 9, 2020
-pyasn1-modules==0.2.8 --hash=sha256:a50b808ffeb97cb3601dd25981f6b016cbb3d31fbf57a8b8a87428e6158d0c74
-
-# Required by google-auth
-# Uploaded May 23, 2019
 cachetools==3.1.1 --hash=sha256:428266a1c0d36dc5aca63a2d7c5942e88c2c898d72139fca0e97fdd2380517ae
-
-# Required by google-auth
-# Uploaded Jun 12, 2020
+pyasn1-modules==0.2.8 --hash=sha256:a50b808ffeb97cb3601dd25981f6b016cbb3d31fbf57a8b8a87428e6158d0c74
 rsa==4.5 --hash=sha256:35c5b5f6675ac02120036d97cf96f1fde4d49670543db2822ba5015e21a18032
 
 # Required by pyasn1-modules
-# Uploaded Nov 16, 2019
 pyasn1==0.4.8 --hash=sha256:39c7e2ec30515947ff4e87fb6f456dfc6e84857d34be479c9d4a4ba4bf46aa5d
